<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/bg"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/menu_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="30dp"
                    android:background="@android:color/transparent"
                    android:text="DDD"
                    android:textColor="@color/white"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="20dp"
                    android:text="@string/register_as_either_a_facility_n_or_as_a_ddd_outlet"
                    android:textColor="@color/white"
                    android:textSize="20dp" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="210dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">


                <Button
                    android:id="@+id/registerOutlet"
                    android:layout_width="wrap_content"
                    android:layout_height="350dp"
                    android:background="@drawable/registerfacility"
                    android:text="@string/register_as_facility"
                    android:textAlignment="center"
                    android:textColor="@color/purple"
                    android:textSize="13dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="24dp">

                <Button
                    android:id="@+id/registerOutlet1"
                    android:layout_width="wrap_content"
                    android:layout_height="350dp"
                    android:background="@drawable/registerscreenoutlet"
                    android:text="@string/register_as_a_ddd_outlet"
                    android:textAlignment="center"
                    android:textColor="@color/purple"
                    android:textSize="13dp" />


            </LinearLayout>
        </LinearLayout>


        <ImageView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="270dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>